# occt-draw-core

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build-wasm.cmd  package.json
apps/cad_kernel_demo/: CMakeLists.txt  main.cpp
include/occt_draw_core/: core.hxx
scripts/: build-wasm.ps1
src/: CMakeLists.txt  placeholder.cpp  wasm_entry.cpp
tests/: CMakeLists.txt
types/: cad-kernel.d.ts
